<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/overviewLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.boroscsaba.savingstrackerbase.view.OverviewViewFragment">

        <com.boroscsaba.commonlibrary.viewelements.charts.HalfPieChartView
            android:id="@+id/halfPieChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <com.boroscsaba.commonlibrary.viewelements.currency.AmountWithCurrencyView
                android:id="@+id/currentSumView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:styleName="PositiveAmountText"
                app:imageSize="16dp"
                app:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#898989"
                android:text="@string/dash"
                android:textSize="16sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <com.boroscsaba.commonlibrary.viewelements.currency.AmountWithCurrencyView
                android:id="@+id/targetSumView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:styleName="PositiveAmountText"
                app:imageSize="16dp"
                app:textSize="16sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/total_saved"/>

            <TextView
                android:id="@+id/totalSavedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/current_total"/>

            <TextView
                android:id="@+id/currentTotalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/completed_goals"/>

            <TextView
                android:id="@+id/completedGoalsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/active_goals"/>

            <TextView
                android:id="@+id/activeGoalsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/daily_average_saving"/>

            <TextView
                android:id="@+id/dailyAverageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/last_week_savings"/>

            <TextView
                android:id="@+id/lastWeekSavingsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/last_month_savings"/>

            <TextView
                android:id="@+id/lastMonthSavingsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/all_transactions"/>

            <TextView
                android:id="@+id/transactionsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/average_transaction"/>

            <TextView
                android:id="@+id/averageTransactionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/amount_left"/>

            <TextView
                android:id="@+id/amountLeftText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:text="@string/expected_completion"/>

            <TextView
                android:id="@+id/expectedCompletionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:gravity="end" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
